import {CommentList, Comment} from './CommentList'
import renderer from 'react-test-renderer'
import React from 'react'

const mockedStory = {
  "by" : "dhouston",
  "descendants" : 71,
  "id" : 8863,
  "kids" : [ 8952, 9224, 8917, 8884, 8887, 8943, 8869, 8958, 9005, 9671, 8940, 9067, 8908, 9055, 8865, 8881, 8872, 8873, 8955, 10403, 8903, 8928, 9125, 8998, 8901, 8902, 8907, 8894, 8878, 8870, 8980, 8934, 8876 ],
  "score" : 111,
  "time" : 1175714200,
  "title" : "My YC app: Dropbox - Throw away your USB drive",
  "type" : "story",
  "url" : "http://www.getdropbox.com/u/2/screencast.html"
}

const mockedComment = {
  "by" : "norvig",
  "id" : 2921983,
  "kids" : [ 2922097, 2922429, 2924562, 2922709, 2922573, 2922140, 2922141 ],
  "parent" : 2921506,
  "text" : "Aw shucks, guys ... you make me blush with your compliments.<p>Tell you what, Ill make a deal: I'll keep writing if you keep reading. K?",
  "time" : 1314211127,
  "type" : "comment"
}

it('Should render CommentList correctly', () => {
  const tree = renderer
    .create(<CommentList parent={mockedStory} level={1}/>)
    .toJSON()
  expect(tree).toMatchSnapshot()
})

it('Should render Comment correctly', () => {
  const tree = renderer
    .create(<Comment comment={mockedComment} level={1}/>)
    .toJSON()
  expect(tree).toMatchSnapshot()
})